2008-08-16  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/status/web/__init__.py,
	jhbuild/buildbot/status/web/feeds.py,
	jhbuild/buildbot/status/web/waterfall.py: waterfall customisation to
	only display changes related to the given module; moved waterfall code
	in its own module; renamed feeds module from feeder to feeds.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* buildbot/master.cfg, jhbuild/config.py, jhbuild/defaults.jhbuildrc:
	new jhbuildbot_svn_commits_box for build master to give the path to
	a Maildir box with messages from svn-commits-list; also removed
	unrelated explanations from buildbot master.cfg.

2008-08-16  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: added pyobject as a
	suggested dependency of dbus-python, as it is required for its test
	suite.

2008-08-15  John Carr  <john.carr@unrouted.co.uk>

	* jhbuild/main.py,
	* jhbuild/commands/bot.py: Allow changing the .jhbuildrc path by
	setting the JHBUILDRC environment variable.

2008-08-15  John Carr  <john.carr@unrouted.co.uk>

	* jhbuild/commands/bot.py,
	* jhbuild/buildbot/steps/py: Remove the need for any slave side
	custom code (call jhbuild updateone from server using 
	RemoteShellCommand)

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/status/web/__init__.py: also include total of
	"build went ok but checks failed" in slave summary.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/status/web/__init__.py,
	buildbot/public_html/lgo.css: paint failures in 'make check' as orange.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: fixed check-target
	attribute name for libvolume_id.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: build libdaemon with
	--disable-lynx by default.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py: let build slaves always autogen (or
	configure).
