@@ -116,6 +116,11 @@ div.sidebar h2 {
 	color: #eeeeec;
 }
 
+#header h1 a {
+	text-decoration: inherit;
+	color: inherit;
+}
+
 #tabs {
 	background: url(bar.png) 0 100% repeat-x;
 	width: 100%;
@@ -192,6 +197,15 @@ a img {
 	border: none;
 }
 
+div#footer {
+	border-top: 1px solid gray;
+	color: #888;
+	font-size: 80%;
+	margin: 3em 3em 1em;
+	padding-top: 1.5em;
+	text-align: center;
+}
+
 /* Buildbot stuff */
 
 table.ProjectSummary tbody th {
@@ -254,7 +268,36 @@ td.failedchecks {
 }
 
 
+table.waterfall {
+}
+
+table.waterfall td.Time {
+	background: #e0e0e0;
+	border: 1px solid #888;
+	text-align: center;
+	padding: 0 2px;
+}
+
+table.waterfall td.LastBuild,
+table.waterfall td.BuildStep {
+	border: 1px solid #888;
+}
+
+table.waterfall .Change {
+	padding-right: 1em;
+}
+
+table.waterfall td.start {
+	background: #ff8;
+	font-weight: bold;
+}
+
+table.waterfall td.start a {
+	text-decoration: none;
+}
+
 /* From classic */
+/*
 td.Change, td.Time, td.Event {
     background: #e0e0e0;
 }
@@ -265,6 +308,7 @@ td.Event, td.BuildStep, td.Activity, td.Change, td.Time, td.Builder, td.LastBuil
     border-bottom: 1px solid;
     border-left: 1px solid;
 }
+*/
 
 tr.totals td {
     padding-top: 1ex;
