@@ -18,7 +18,7 @@
 <li id="siteaction-gnome_community"><a href="http://www.gnome.org/community/">Community</a></li>
 </ul>
 <div id="header">
-<h1>GNOME Buildbot</h1>
+<h1><a href="/">@@GNOME_BUILDBOT_TITLE@@</a></h1>
 
  <div id="tabs">
   <ul id="portal-globalnav">
@@ -32,6 +32,14 @@
 <div class="body">
 
 @@GNOME_BUILDBOT_BODY@@
+
+
+  <div id="footer">
+    Copyright &copy; 2008 <a href="http://www.gnome.org/">The GNOME Project</a>.<br />
+    <br/>
+    Powered by <a href="http://buildbot.net">Buildbot</a>.
+  </div>
+
 
 </div> <!-- end of .body -->
 </body>
