@@ -1,5 +1,12 @@
 2008-08-16  Frederic Peters  <fpeters@0d.be>
 
+	* buildbot/public_html/lgo.css, buildbot/template.html,
+	jhbuild/buildbot/status/web/__init__.py,
+	jhbuild/buildbot/status/web/waterfall.py: cleaned and improved module
+	waterfall pages.
+
+2008-08-16  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/buildbot/status/web/__init__.py,
 	jhbuild/buildbot/status/web/feeds.py,
 	jhbuild/buildbot/status/web/waterfall.py: waterfall customisation to
